name:                packuilon-monitor
version:             0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/daantjie/packuilon-monitor-prototype#readme
license:             GPL-3
license-file:        LICENSE
author:              Daniel Oosthuizen
maintainer:          danieltheexperimenter@gmail.com
copyright:           (c) Daniel Oosthuizen 2017
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Packuilon.Monitor.Log
  build-depends:       base >= 4.7 && < 5
                     , machines
                     , concurrent-machines
                     , mtl
                     , directory
                     , transformers
                     , text
                     , filepath
                     , attoparsec
  default-language:    Haskell2010

executable packuilon-monitor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packuilon-monitor
  default-language:    Haskell2010

test-suite packuilon-monitor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , packuilon-monitor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/daantjie/packuilon-monitor-prototype
